# matrixbootstrap

./: .gitignore  .pre-commit-config.yaml  Bootstrap Notebook.ipynb  HKK_extracted_data_Fig3a.csv  Plotting Notebook.ipynb  README.md  degeneracy_issue.txt  experiment_log.txt  pyproject.toml  session_summary_2026_03_24.txt
arXiv-2004.10212v2/: newarxiv.tex
bmn/: algebra.py  bootstrap.py  linear_algebra.py
matrixbootstrap/: __init__.py  algebra.py  bootstrap.py  bootstrap_complex.py  born_oppenheimer.py  brezin.py  config_utils.py  debug_utils.py  group_theory.py  linear_algebra.py  models.py  solver_newton.py  solver_pytorch.py  solver_trustregion.py  utils.py
scripts/: admm_convergence_diag.py  mini_bfss.py  mini_bmn.py  mini_bmn_invariant_basis.py  one_matrix 2.py  one_matrix.py  play.py  plotter.py  run_l3_clarabel.py  run_l3_invariant_safe.py  symmetry_check.py  test_l2_invariant_validate.py  two_matrix.py  two_matrix_bo_comparison.py  two_matrix_feasibility_bound.py
scripts/tests/: mini_bfss_test.py  mini_bmn_test.py  one_matrix_test.py  three_matrix_test.py  two_matrix_test.py
tests/: test_algebra.py  test_bootstrap.py  test_brezin.py  test_factorization_block.py  test_group_theory.py  test_linear_algebra.py  test_models.py
