[tool.poetry]
name = "bmnsim"
version = "0.1.0"
description = "BMN simulation and analysis package"
authors = ["Gavin Hartnett <gshartnett@gmail.com>"]
readme = "README.md"
packages = [{include = "bmn"}]

[tool.poetry.dependencies]
python = ">=3.10, <3.13"
numpy = "^1.24.0"
pandas = "^2.0.0"
scipy = "^1.10.0"
matplotlib = "^3.7.0"
jupyter = "^1.0.0"
cvxpy = "^1.3.0"
torch = "^2.0.0"
fire = "^0.5.0"
cycler = "^0.11.0"

[tool.poetry.group.dev.dependencies]
black = "^23.0.0"
isort = "^5.12.0"
pytest = "^7.0.0"
ipykernel = "^6.0.0"

[tool.black]
exclude = '''
(
     /(
         docs
     )/
)
'''

[tool.isort]
profile = "black"
force_grid_wrap = "2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"