[tool.poetry]
name = "matrixbootstrap"
version = "0.1.0"
description = "Matrix bootstrap for quantum mechanical matrix models"
authors = ["Gavin Hartnett <gshartnett@gmail.com>"]
readme = "README.md"
packages = [{include = "matrixbootstrap"}]


[tool.poetry.dependencies]
python = ">=3.10, <3.13"
numpy = ">=1.24"
scipy = ">=1.10"
cvxpy = ">=1.3"
torch = ">=2.0"
PyYAML = ">=6.0"
fire = ">=0.5"
psutil = ">=5.9"
sparseqr = ">=1.0"
matplotlib = ">=3.7"
pandas = ">=2.0"
cycler = ">=0.11"


[tool.poetry.dev-dependencies]
pytest = ">=7.0"

[tool.pytest.ini_options]
testpaths = ["tests"]


[tool.ruff]
exclude = ["*.ipynb"]

[tool.ruff.lint]
ignore = ["F841"]  # local variable assigned but never used — often intentional stubs

[tool.black]
exclude = '''
(
     /(
         docs
     )/
)
'''

[tool.isort]
profile = "black"
force_grid_wrap = "2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
